--- a/packages/openapi/package.json
+++ b/packages/openapi/package.json
@@ -4,7 +4,7 @@
 	"description": "Generates OpenAPI doc",
 	"type": "module",
 	"scripts": {
-		"gen": "tsx src/gen.ts",
+		"generate": "bun run --cwd ../zod build && tsx src/generate.ts",
 		"build": "tsc && tsc-alias",
 		"dev": "wait-on ../zod/dist/index.js && tsc && (concurrently \"tsc -w\" \"tsc-alias -w\")",
 		"clean": "rimraf dist tsconfig.tsbuildinfo .turbo node_modules"
