--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"api:migrations-down": "cd apps/api && sh -c \"printf 'Are you sure? [y/N] ' && read ans && [ \"$${ans:-N}\" = \"y\" ] && migrate -database \"$$API_DB_DSN\" -path ./internal/database/migrations down 1 || echo 'Aborted'\"",
 		"api:migrations-up": "cd apps/api && sh -c \"printf 'Are you sure? [y/N] ' && read ans && [ \"$${ans:-N}\" = \"y\" ] && migrate -database \"$$API_DB_DSN\" -path ./internal/database/migrations up || echo 'Aborted'\"",
 		"api:tidy": "cd apps/api && go fmt ./... && go mod tidy && go mod verify",
+		"api:test": "cd apps/api && go test ./internal/service ./internal/handler ./internal/repository",
 		"openapi:generate": "cd packages/openapi && bun generate"
 	},
 	"packageManager": "bun@1.2.13",
