feat: autorization system with ABAC model.

--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
 		"typecheck": "turbo run typecheck",
 		"clean": "turbo run clean && rimraf node_modules",
 		"api:run": "cd apps/api && go run ./cmd/api",
-		"api:migrations-new": "cd apps/api && sh -c \"if [ -z '$$NAME' ]; then echo 'Error: NAME parameter is required'; echo 'Usage: bun run api:migrations-new -- NAME=migration_name'; exit 1; fi; migrate create -ext sql -dir ./internal/database/migrations -seq '$$NAME'\"",
-		"api:migrations-down": "cd apps/api && sh -c \"printf 'Are you sure? [y/N] ' && read ans && [ \"$${ans:-N}\" = \"y\" ] && migrate -database \"$$API_DB_DSN\" -path ./internal/database/migrations down 1 || echo 'Aborted'\"",
-		"api:migrations-up": "cd apps/api && sh -c \"printf 'Are you sure? [y/N] ' && read ans && [ \"$${ans:-N}\" = \"y\" ] && migrate -database \"$$API_DB_DSN\" -path ./internal/database/migrations up || echo 'Aborted'\"",
+		"api:migrate:new": "cd apps/api && make migrate-new",
+		"api:migrate:up": "cd apps/api && make migrate-up",
+		"api:migrate:down": "cd apps/api && make migrate-down",
+		"api:migrate:fresh": "cd apps/api && make migrate-fresh",
 		"api:tidy": "cd apps/api && go fmt ./... && go mod tidy && go mod verify",
-		"api:test": "cd apps/api && go test ./internal/service ./internal/handler ./internal/repository",
+		"api:test": "cd apps/api && sh -c \"go test -covermode=atomic -coverprofile=coverage.out ./internal/handler ./internal/service ./internal/middleware ./internal/repository && go tool cover -func=coverage.out | tail -n1 && go tool cover -html=coverage.out -o coverage.html\"",
 		"openapi:generate": "cd packages/openapi && bun generate",
 		"emails:generate": "cd packages/emails && bun run generate"
 	},
