--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,30 +16,33 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.11",
+    "@clerk/clerk-react": "^5.38.1",
     "@go-kickstart/openapi": "workspace:*",
     "@go-kickstart/zod": "workspace:*",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.536.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11",
-    "@clerk/clerk-react": "^5.38.1",
     "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.84.1",
     "@tanstack/react-query-devtools": "^5.84.1",
     "@ts-rest/core": "^3.52.1",
+    "@ts-rest/react-query": "^3.52.1",
     "axios": "^1.11.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.562.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
     "react-router-dom": "^7.7.1",
     "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.11",
     "ts-pattern": "^5.8.0",
     "zod": "^4.0.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
@@ -48,11 +51,10 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
-    "tw-animate-css": "^1.3.6",
+    "tw-animate-css": "^1.4.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "wait-on": "^8.0.4"
   }
 }
