--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,7 +20,9 @@
     "@go-kickstart/openapi": "workspace:*",
     "@go-kickstart/zod": "workspace:*",
     "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@react-oauth/google": "^0.13.4",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.84.1",
     "@tanstack/react-query-devtools": "^5.84.1",
