feat: implement google auth

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -2,6 +2,7 @@
 # PRIMARY CONFIGURATION
 # ============================================================================
 
+API_PRIMARY.APP_NAME="go-kickstart"
 API_PRIMARY.ENV="development"
 
 # ============================================================================
@@ -36,6 +37,16 @@ API_DATABASE.CONN_MAX_IDLE_TIME="5m"
 API_AUTH.SECRET_KEY="secret"    # can be generated using `openssl rand -base64 32`
 API_AUTH.ACCESS_TOKEN_TTL="1h"
 API_AUTH.GOOGLE_CLIENT_ID=""     # optional, required for Google login
+API_AUTH.GOOGLE_CLIENT_SECRET="" # optional, required for Google login
+API_AUTH.GOOGLE_REDIRECT_URL="http://localhost:8080/api/v1/auth/google/callback"   # optional, required for Google login
+API_AUTH.GOOGLE_SUCCESS_REDIRECT_URL="http://localhost:3000/auth/me"    # optional, required for Google login
+API_AUTH.GOOGLE_FAILURE_REDIRECT_URL="http://localhost:3000/auth/login" # optional, required for Google login
+API_AUTH.REFRESH_TOKEN_TTL="720h"
+API_AUTH.EMAIL_VERIFICATION_TTL="10m"
+API_AUTH.ACCESS_COOKIE_NAME="access_token"
+API_AUTH.REFRESH_COOKIE_NAME="refresh_token"
+API_AUTH.COOKIE_DOMAIN=""   # optional, set for cross-subdomain cookies
+API_AUTH.COOKIE_SAME_SITE="lax"     # one of: lax, strict, none
 
 # ============================================================================
 # SMTP CONFIGURATION
