--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "wait-on ../../packages/openapi/dist/index.js && vite",
     "build": "bun install && tsc && env-cmd -f .env.local vite build",
-    "test": "vite test",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ci": "vitest run",
     "preview": "vite preview",
     "lint:fix": "eslint src --fix",
     "lint": "eslint src",
@@ -43,6 +45,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -51,11 +56,14 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "jsdom": "^24.0.0",
+    "msw": "^2.3.5",
     "prettier": "^3.6.2",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4",
+    "vitest": "^2.0.5",
     "wait-on": "^8.0.4"
   }
 }
