--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
 	"version": "1.0.0",
 	"scripts": {
 		"build": "turbo run build",
-		"dev": "turbo run dev",
+		"dev:all": "turbo run dev",
+		"dev": "turbo run dev --filter=./apps/*",
 		"format:check": "turbo run format:check",
 		"format:fix": "turbo run format:fix",
 		"lint": "turbo run lint",
 		"lint:fix": "turbo run lint:fix",
 		"typecheck": "turbo run typecheck",
+		"test": "turbo run test",
 		"clean": "turbo run clean && rimraf node_modules",
 		"api:run": "cd apps/api && go run ./cmd/api",
 		"api:migrate:new": "cd apps/api && make migrate-new",
@@ -17,6 +19,7 @@
 		"api:migrate:fresh": "cd apps/api && make migrate-fresh",
 		"api:tidy": "cd apps/api && go fmt ./... && go mod tidy && go mod verify",
 		"api:test": "cd apps/api && sh -c \"go test -covermode=atomic -coverprofile=coverage.out ./internal/handler ./internal/service ./internal/middleware ./internal/repository && go tool cover -func=coverage.out | tail -n1 && go tool cover -html=coverage.out -o coverage.html\"",
+		"web:test": "cd apps/web && bun run test:ci",
 		"web:shadcn:add": "cd apps/web && bunx --bun shadcn@latest add",
 		"openapi:generate": "cd packages/openapi && bun generate",
 		"emails:generate": "cd packages/emails && bun run generate"
