--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "wait-on ../../packages/openapi/dist/index.js && vite",
-    "build": "bun install && tsc && env-cmd -f .env.local vite build",
+    "build": "vite build",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ci": "vitest run",
