feat: added caching layer

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -61,10 +61,11 @@ API_SMTP.FROM_EMAIL="you@gmail.com"
 API_SMTP.FROM_NAME="go-kickstart"
 
 # ============================================================================
-# REDIS CONFIGURATION
+# CACHE CONFIGURATION
 # ============================================================================
 
-API_REDIS.ADDRESS="localhost:6379"
+API_CACHE.TTL="5m"
+API_CACHE.REDIS_ADDRESS="localhost:6379"
 
 # ============================================================================
 # OBSERVABILITY CONFIGURATION
