--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     environment:
       API_DATABASE.HOST: "db"
       API_DATABASE.PASSWORD: "postgres"
-      API_REDIS.ADDRESS: "redis:6379"
+      API_CACHE.REDIS_ADDRESS: "redis:6379"
     depends_on:
       db:
         condition: service_healthy
@@ -54,7 +54,7 @@ services:
     environment:
       API_DATABASE.HOST: "db"
       API_DATABASE.PASSWORD: "postgres"
-      API_REDIS.ADDRESS: "redis:6379"
+      API_CACHE.REDIS_ADDRESS: "redis:6379"
     ports:
       - "8080:8080"
     depends_on:
