--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -7,7 +7,13 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@go-kickstart/openapi": ["../../packages/openapi/src/index.ts"],
+      "@go-kickstart/openapi/*": ["../../packages/openapi/src/*"],
+      "@go-kickstart/ui": ["../../packages/ui/src/index.ts"],
+      "@go-kickstart/ui/*": ["../../packages/ui/src/*"],
+      "@go-kickstart/zod": ["../../packages/zod/src/index.ts"],
+      "@go-kickstart/zod/*": ["../../packages/zod/src/*"]
     }
   }
 }
