--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "wait-on ../../packages/openapi/dist/index.js && vite",
+    "dev": "vite",
     "build": "vite build",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@go-kickstart/openapi": "workspace:*",
+    "@go-kickstart/ui": "workspace:*",
     "@go-kickstart/zod": "workspace:*",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
