--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"api:install": "cd apps/api && go mod download",
 		"api:test": "cd apps/api && sh -c \"go test -covermode=atomic -coverprofile=coverage.out ./internal/handler ./internal/service ./internal/middleware ./internal/repository && go tool cover -func=coverage.out | tail -n1 && go tool cover -html=coverage.out -o coverage.html\"",
 		"web:test": "cd apps/web && bun run test:ci",
-		"web:shadcn:add": "cd apps/web && bunx --bun shadcn@latest add",
+		"ui:shadcn:add": "cd packages/ui && bunx --bun shadcn@latest add",
+		"web:shadcn:add": "bun run ui:shadcn:add",
 		"openapi:generate": "cd packages/openapi && bun generate",
 		"emails:generate": "cd packages/emails && bun run generate",
 		"postinstall": "bun run api:install"
