feat(api): add seed Makefile target, use UUIDs; refine OpenAPI
Add a phony "seed" target to Makefile to run cmd/seed. SeedUsers now assigns ID via uuid.New() so seeded users have unique UUIDs. Update OpenAPI operationId and response schemas (defaults, types, enums) to standardize health and auth responses.

--- a/apps/api/Makefile
+++ b/apps/api/Makefile
@@ -44,6 +44,12 @@ confirm:
 run:
 	go run ./cmd/api
 
+.PHONY: seed
+seed:
+	@echo "Seeding database..."
+	go run ./cmd/seed
+	@echo "Database seeded."
+	
 # Create new migration
 .PHONY: migrate-new
 migrate-new:
