feat: added storage feature

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -110,3 +110,24 @@ API_OBSERVABILITY.HEALTH_CHECKS.CHECKS="database,redis"
 # ============================================================================
 API_SEEDER.ENABLED="true"
 API_SEEDER.TIMEOUT="60s"
+
+# ============================================================================
+# FILE STORAGE CONFIGURATION
+# ============================================================================
+
+API_FILE_STORAGE.PROVIDER="local" # local or s3
+API_FILE_STORAGE.MAX_UPLOAD_SIZE_MB="25"
+API_FILE_STORAGE.ALLOWED_MIME_TYPES="image/jpeg,image/png,image/webp,image/gif,video/mp4,video/webm"
+API_FILE_STORAGE.PATH_PREFIX="uploads"
+
+API_FILE_STORAGE.LOCAL.BASE_DIR="static"
+API_FILE_STORAGE.LOCAL.PUBLIC_PATH="/static"
+
+# S3 Configuration (required if using S3 as provider)
+API_FILE_STORAGE.S3.BUCKET=""
+API_FILE_STORAGE.S3.REGION=""
+API_FILE_STORAGE.S3.ENDPOINT=""
+API_FILE_STORAGE.S3.PUBLIC_URL=""
+API_FILE_STORAGE.S3.ACCESS_KEY_ID=""
+API_FILE_STORAGE.S3.SECRET_ACCESS_KEY=""
+API_FILE_STORAGE.S3.FORCE_PATH_STYLE="false"
