chore: added some scripts

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
 	"name": "go-kickstart",
 	"version": "1.0.0",
 	"scripts": {
-		"build": "turbo run build",
+		"build": "turbo run build --filter=./apps/*",
+		"build:all": "turbo run build",
 		"dev:all": "turbo run dev",
 		"dev": "turbo run dev --filter=./apps/*",
 		"format:check": "turbo run format:check",
@@ -12,7 +13,7 @@
 		"typecheck": "turbo run typecheck",
 		"test": "turbo run test",
 		"clean": "turbo run clean && rimraf node_modules",
-		"api:run": "cd apps/api && go run ./cmd/api",
+		"api:run": "turbo run dev --filter=@go-kickstart/api",
 		"api:seed": "cd apps/api && make seed",
 		"api:migrate:new": "cd apps/api && make migrate-new",
 		"api:migrate:up": "cd apps/api && make migrate-up",
@@ -20,12 +21,13 @@
 		"api:migrate:fresh": "cd apps/api && make migrate-fresh",
 		"api:tidy": "cd apps/api && go fmt ./... && go mod tidy && go mod verify",
 		"api:install": "cd apps/api && go mod download",
-		"api:test": "cd apps/api && sh -c \"go test -covermode=atomic -coverprofile=coverage.out ./internal/handler ./internal/service ./internal/middleware ./internal/repository && go tool cover -func=coverage.out | tail -n1 && go tool cover -html=coverage.out -o coverage.html\"",
-		"web:test": "cd apps/web && bun run test:ci",
+		"api:test": "turbo run test --filter=@go-kickstart/api",
+		"web:test": "turbo run test --filter=@go-kickstart/web",
 		"ui:shadcn:add": "cd packages/ui && bunx --bun shadcn@latest add",
 		"web:shadcn:add": "bun run ui:shadcn:add",
 		"openapi:generate": "cd packages/openapi && bun generate",
 		"emails:generate": "cd packages/emails && bun run generate",
+		"ci:simulate": "bun install --frozen-lockfile && bun run openapi:generate && bun run emails:generate && git status --porcelain && bun run build && bun run test && echo '✅ CI simulation completed successfully!'",
 		"postinstall": "bun run api:install"
 	},
 	"packageManager": "bun@1.2.13",
