fix(scaffold): ensure .env examples survive rendering
Allowed `.env.example*` paths through the default skip filter so the renderer still copies the example files into generated projects, added tests to guard the new behavior, and expanded the embed list to explicitly include the web and api env examples so they are available even though dotfiles are usually skipped by `go:embed`.

--- a/apps/cli/templates/monorepo/turbo.json
+++ b/apps/cli/templates/monorepo/turbo.json
@@ -4,7 +4,8 @@
 	"tasks": {
 		"build": {
 			"dependsOn": ["^build"],
-			"inputs": ["$TURBO_DEFAULT$", ".env*"]
+			"inputs": ["$TURBO_DEFAULT$", ".env*"],
+			"cache": false
 		},
 		"lint": {
 			"dependsOn": ["^lint"]
