--- a/apps/cli/templates/monorepo/apps/api/Makefile
+++ b/apps/cli/templates/monorepo/apps/api/Makefile
@@ -8,6 +8,7 @@ endif
 
 # Variables (fallback defaults)
 API_DB_DSN ?=
+MIGRATIONS_DIR ?= ./internal/infrastructure/database/migrations
 
 # If `API_DB_DSN` is not set, try to build it from `API_DATABASE.*` entries in `.env`.
 ifeq ($(strip $(API_DB_DSN)),)
@@ -39,6 +40,33 @@ help:
 confirm:
 	@printf "Are you sure? [y/N] " && read ans && [ "$${ans:-N}" = "y" ]
 
+# Ensure golang-migrate CLI is available (offers interactive install if missing)
+.PHONY: ensure-migrate
+ensure-migrate:
+	@if ! command -v migrate >/dev/null 2>&1; then \
+		echo "Missing required dependency: golang-migrate CLI ('migrate')."; \
+		printf "Install it now using 'go install'? [y/N] "; \
+		read ans; \
+		if [ "$${ans:-N}" = "y" ]; then \
+			if ! command -v go >/dev/null 2>&1; then \
+				echo "Go is not installed or not in PATH. Install Go first, then rerun."; \
+				exit 1; \
+			fi; \
+			echo "Installing migrate CLI..."; \
+			go install -tags 'postgres' github.com/golang-migrate/migrate/v4/cmd/migrate@latest || exit 1; \
+			GOPATH_BIN="$$(go env GOPATH)/bin"; \
+			echo "Installed 'migrate' to $$GOPATH_BIN."; \
+			echo "Resuming action..."; \
+			case ":$$PATH:" in \
+				*":$$GOPATH_BIN:"*) ;; \
+				*) echo "Note: $$GOPATH_BIN is not in PATH. Add it, then open a new shell."; ;; \
+			esac; \
+		else \
+			echo "Install required dependency and rerun this command."; \
+			exit 1; \
+		fi; \
+	fi
+
 # Run application
 .PHONY: run
 run:
@@ -52,36 +80,36 @@ seed:
 	
 # Create new migration
 .PHONY: migrate-new
-migrate-new:
+migrate-new: ensure-migrate
 	@if [ -z "$(NAME)" ]; then \
 		echo "Error: NAME parameter is required"; \
 		echo "Usage: make migrate-new NAME=migration_name"; \
 		exit 1; \
 	fi
 	@echo "Creating migration file for $(NAME)..."
-	migrate create -ext sql -dir ./internal/database/migrations -seq $(NAME)
+	migrate create -ext sql -dir $(MIGRATIONS_DIR) -seq $(NAME)
 	@echo "Migration file created for $(NAME)."
 
 # Roll back last migration
 .PHONY: migrate-down
-migrate-down: confirm
+migrate-down: ensure-migrate confirm
 	@echo "Rolling back last migration..."
-	migrate -database "$(API_DB_DSN)" -path ./internal/database/migrations down 1
+	migrate -database "$(API_DB_DSN)" -path $(MIGRATIONS_DIR) down 1
 	@echo "Last migration rolled back."
 
 # Apply migrations
 .PHONY: migrate-up
-migrate-up: confirm
+migrate-up: ensure-migrate confirm
 	@echo "Running up migrations..."
-	migrate -database "$(API_DB_DSN)" -path ./internal/database/migrations up
+	migrate -database "$(API_DB_DSN)" -path $(MIGRATIONS_DIR) up
 	@echo "Migrations applied."
 
 # Drop everything managed by migrate and reapply migrations
 .PHONY: migrate-fresh
-migrate-fresh: confirm
+migrate-fresh: ensure-migrate confirm
 	@echo "Dropping all database objects (migrate drop) and reapplying migrations..."
-	@migrate -database "$(API_DB_DSN)" -path ./internal/database/migrations drop -f || true
-	@migrate -database "$(API_DB_DSN)" -path ./internal/database/migrations up
+	@migrate -database "$(API_DB_DSN)" -path $(MIGRATIONS_DIR) drop -f || true
+	@migrate -database "$(API_DB_DSN)" -path $(MIGRATIONS_DIR) up
 	@echo "Database refreshed."
 
 # Go maintenance
